--- a/.env.production.example
+++ b/.env.production.example
@@ -1,8 +1,10 @@
 OPENROUTER_API_KEY=sk-or-your-key-here
 OPENROUTER_MODEL=openai/gpt-oss-120b
 OPENROUTER_TEST_MODE=false
-PORT=3001
+
 HOST=127.0.0.1
-PUBLIC_BASE_URL=http://127.0.0.1:3001
+PORT=3001
+PUBLIC_BASE_URL=https://reviewgen.ovh
 CORS_ALLOWED_ORIGINS=https://dashboard.babel.audio
+
 REVIEW_PAIR_LOG_PATH=logs/review-text-pairs.jsonl
