Add analytics logging and submit review action endpoint

--- a/.env.production.example
+++ b/.env.production.example
@@ -8,3 +8,4 @@ PUBLIC_BASE_URL=https://reviewgen.ovh
 CORS_ALLOWED_ORIGINS=https://dashboard.babel.audio
 
 REVIEW_PAIR_LOG_PATH=logs/review-text-pairs.jsonl
+ANALYTICS_LOG_PATH=logs/review-analytics.jsonl
