--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ HOST=127.0.0.1
 PUBLIC_BASE_URL=http://127.0.0.1:3001
 CORS_ALLOWED_ORIGINS=https://dashboard.babel.audio
 REVIEW_PAIR_LOG_PATH=logs/review-text-pairs.jsonl
+ANALYTICS_LOG_PATH=logs/review-analytics.jsonl
