--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "bun --watch src/index.ts",
-    "start": "bun src/index.ts"
+    "dev": "bun --no-env-file --watch src/index.ts",
+    "start": "bun --no-env-file src/index.ts"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.3.0",
     "elysia": "^1.3.0"
   }
 }
-
